Add show error option to curl
This work was triggered by KFLUXBUGS-1285.
User was trying to use dockerfile from an url, but it was failing for a
uknown reason and there was not any information as to why it might be
failing. It only showed the last successful log:

"Fetch Dockerfile from <URL>".

The true reason behind that failure is that the user was trying to fetch
the Dockerfile from an internal gitlab. That instance is accessible only
from internal network and with a certificate issued by Red Hat is needed.
Dockerfile failed "violently", without returning any error msg and did not return any http code.
Also we are using "set -e" which means, we exit on failure.

The reason we did not have any error message from the curl is the "-s"
(silent) option. However, adding -S (show error) means that we will be
outputting errors on failure without showing the curl progress bar

Signed-off-by: mkosiarc <mkosiarc@redhat.com>

--- a/task/buildah-remote/0.2/buildah-remote.yaml
+++ b/task/buildah-remote/0.2/buildah-remote.yaml
@@ -284,12 +284,12 @@ spec:
       elif echo "$DOCKERFILE" | grep -q "^https\?://"; then
         echo "Fetch Dockerfile from $DOCKERFILE"
         dockerfile_path=$(mktemp --suffix=-Dockerfile)
-        http_code=$(curl -s -L -w "%{http_code}" --output "$dockerfile_path" "$DOCKERFILE")
+        http_code=$(curl -s -S -L -w "%{http_code}" --output "$dockerfile_path" "$DOCKERFILE")
         if [ $http_code != 200 ]; then
           echo "No Dockerfile is fetched. Server responds $http_code"
           exit 1
         fi
-        http_code=$(curl -s -L -w "%{http_code}" --output "$dockerfile_path.dockerignore.tmp" "$DOCKERFILE.dockerignore")
+        http_code=$(curl -s -S -L -w "%{http_code}" --output "$dockerfile_path.dockerignore.tmp" "$DOCKERFILE.dockerignore")
         if [ $http_code = 200 ]; then
           echo "Fetched .dockerignore from $DOCKERFILE.dockerignore"
           mv "$dockerfile_path.dockerignore.tmp" $SOURCE_CODE_DIR/$CONTEXT/.dockerignore
