Fix workdir for rpm-ostree OCI-TA Task
Workdir replacement changed from `/var/workdir/source` to `/var/workdir`
as the `source` directory is assumed and appended by the step scripts.

This prevents the script from using `/var/workdir/source/source` paths.

Reference: https://issues.redhat.com/browse/EC-924

--- a/task/rpm-ostree-oci-ta/0.2/recipe.yaml
+++ b/task/rpm-ostree-oci-ta/0.2/recipe.yaml
@@ -6,6 +6,6 @@ preferStepTemplate: true
 removeWorkspaces:
   - source
 replacements:
-  workspaces.source.path: /var/workdir/source
+  workspaces.source.path: /var/workdir
 description: |-
   RPM Ostree (Trusted Artifacts variant).
