Add cachi2 artifact to rpm-ostree OCI-TA Task
We also need to restore the cachi2 TA artifact.

Reference: https://issues.redhat.com/browse/EC-924

--- a/task/rpm-ostree-oci-ta/0.2/recipe.yaml
+++ b/task/rpm-ostree-oci-ta/0.2/recipe.yaml
@@ -2,6 +2,7 @@
 base: ../../rpm-ostree/0.2/rpm-ostree.yaml
 add:
   - use-source
+  - use-cachi2
 preferStepTemplate: true
 removeWorkspaces:
   - source
