fix(renovate): increase PR concurency limit
This repo has too many dependencies, increase concurrency limit, so
other teams are not waiting for changes indefinitelly

Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "config:base"
   ],
   "dependencyDashboard": false,
+  "prConcurrentLimit": 20,
   "tekton": {
     "fileMatch": ["\\.yaml$", "\\.yml$"],
     "includePaths": [
