push to a unique tag in buildah tasks
- Built image in buildah task is pushed to
a location specified in the `IMAGE` param
- This location does not have to be unique
when running multiple PipelineRuns on the
same revision
- A race condition can occur resulting
in a failure
- Besides pushing to `IMAGE`, push to a
tag named after the TaskRun name which
should be unique

--- a/task/buildah-remote/0.2/buildah-remote.yaml
+++ b/task/buildah-remote/0.2/buildah-remote.yaml
@@ -471,7 +471,6 @@ spec:
           VOLUME_MOUNTS+=(--volume /etc/rhsm/ca/redhat-uep.pem:/run/secrets/rhsm/ca/redhat-uep.pem)
         fi
 
-
       # was: if [ -d "$ACTIVATION_KEY_PATH" ]; then
       elif find /entitlement -name "*.pem" >> null; then
         cp -r --preserve=mode "$ENTITLEMENT_PATH" /tmp/entitlement
@@ -757,6 +756,16 @@ spec:
       fi
 
       buildah commit "${BUILDAH_ARGS[@]}" $container $IMAGE
+
+      echo "Pushing to ${IMAGE%:*}:${TASKRUN_NAME}"
+      if ! retry buildah push \
+        --tls-verify="$TLSVERIFY" \
+        "$IMAGE" \
+        "docker://${IMAGE%:*}:$(context.taskRun.name)";
+      then
+        echo "Failed to push sbom image to ${IMAGE%:*}:$(context.taskRun.name) after ${max_run} tries"
+        exit 1
+      fi
 
       echo "Pushing to ${IMAGE}"
       if ! retry buildah push \
