feat(STONEINTG-947): redierct task to the new quay repo konflux-ci
Signed-off-by: Kasem Alem <kalem@kalem-thinkpadp16vgen1.raanaii.csb>

fix tektor linter issues

Revert "fix tektor linter issues"

This reverts commit b2f800cc603ec0907ad2b3962d46919a535e158e.

fix(deps): update module github.com/tektoncd/pipeline to v0.65.0

feat(STONEINTG-947): redierct task to the new quay repo konflux-ci

Signed-off-by: Kasem Alem <kalem@kalem-thinkpadp16vgen1.raanaii.csb>

--- a/renovate.json
+++ b/renovate.json
@@ -46,7 +46,7 @@
       "matchPackageNames": [
         "quay.io/redhat-appstudio/konflux-test",
         "quay.io/redhat-appstudio/clair-in-ci",
-        "quay.io/redhat-appstudio/clamav-db"
+        "quay.io/konflux-ci/clamav-db"
       ],
       "groupName": "integration",
       "reviewers": ["dirgim", "hongweiliu17", "jsztuka", "Josh-Everett", " 14rcole", "chipspeak", "dheerajodha", "kasemAlem", "jencull", "sonam1412"]
@@ -69,7 +69,7 @@
     },
     {
       "matchPackageNames": [
-        "quay.io/redhat-appstudio/clamav-db"
+        "quay.io/konflux-ci/clamav-db"
       ],
       "enabled": false,
       "groupName": "ignore"
